# STAR-Win

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md
.agentdocs/: index.md
.agentdocs/workflow/: 260412-cpp-best-practices.md  260412-htslib-upgrade.md  260412-release-validation-test.md  260412-windows-perf-bottleneck.md  260413-intel-oneapi-integration.md  260413-memory-management-fixes.md  260413-starsolo-qc-report.md  260413-two-branch-strategy.md  260413-unit-test-strategy.md  260413-upstream-opportunities.md  260414-star-webui-llamacpp-stack.md
.agentdocs/workflow/done/: 260412-htslib-upgrade.md  260412-windows-perf-bottleneck.md  260413-algorithmic-optimizations-retry.md  260413-algorithmic-optimizations.md  260413-dependency-minimization.md  260413-dependency-upgrades.md  260413-devops-improvements.md  260413-ggpeti-chimscore-cherry-pick-plan.md  260413-intel-oneapi-integration.md  260413-project-hygiene-improvements.md  260413-report-exporter-enhancements.md  260413-unit-test-strategy.md  260413-upstream-pr-cherry-picks.md  260414-large-file-breakdown-plan.md  260414-star-webui-llamacpp-stack.md
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql.yml  release.yml
scripts/: build_clangcl.ps1  package_release.ps1  release_compare.sh  starsolo_qc_report.sh  validate_build.sh  validate_optimization.sh
source/: .clang-format  .clang-tidy  CMakeLists.txt  ClipCR4.cpp  ClipCR4.h  ClipMate_clipChunk.cpp  FastResetVector.h  Genome_genomeLoad.cpp  Makefile  Parameters.cpp  Parameters.h  ParametersChimeric_initialize.cpp  Parameters_inputSources.cpp  Parameters_openReadsFiles.cpp  Parameters_register.cpp  Parameters_runtimeSetup.cpp  Parameters_validateInput.cpp  ReadAlign_createExtendWindowsWithAlign.cpp  ReadAlign_outputAlignments.cpp  SoloBarcode.cpp  SoloFeature_collapseUMI_Graph.cpp  SoloFeature_emptyDrops_CR.cpp  UMIgraph.h  VERSION  bamSortByCoordinate.cpp  parametersDefault  readLoad.cpp  stitchWindowAligns.cpp  wincompat.h
source/htslib/: config.h  hts_internal.h  version.h  win32_compat.h
source/htslib/win32_stubs/: pthread.h  regex.h  strings.h
source/webui/: WebUI.cpp  WebUI.h  WebUI_html.inc  WebUI_internal.h  WebUI_report.cpp
test/: CMakeLists.txt
test/unit/: test_EmptyDrops.cpp  test_FastResetVector.cpp  test_PackedArray.cpp  test_UMIgraph.cpp  test_UMIgraph_directedCollapse.cpp  test_binarySearch2.cpp  test_blocksOverlap.cpp
